# RetroLauncher

./: README.md
RetroLauncher-/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
RetroLauncher-/src/: App.tsx  index.css  main.tsx
RetroLauncher-/src-tauri/: Cargo.toml  tauri.conf.json
RetroLauncher-/src-tauri/icons/: icon.icns
RetroLauncher-/src-tauri/src/: crocdb.rs  database.rs  emulator.rs  game.rs  main.rs  retroarch.rs
RetroLauncher-/src/components/: BigPictureMode.tsx  Download.tsx  DownloadManager.tsx  EmulatorManager.tsx  Favorites.tsx  GameCard.tsx  Library.tsx  RetroArchManager.tsx  Settings.tsx  Sidebar.tsx
RetroLauncher-/src/hooks/: useGamepad.ts
RetroLauncher-/src/i18n/: config.ts
RetroLauncher-/src/i18n/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json
RetroLauncher-/src/store/: useStore.ts
RetroLauncher-/src/utils/: tauri.ts
